--- a/main.html
+++ b/main.html
@@ -10,6 +10,44 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	 <form action="" method="get">
+        <div>
+            <label for="name">Name</label>
+        <input type="text" id="name">
+        </div>
+        <div>
+            <label for="email">Email</label>
+        <input type="email" id="email" required>
+        </div>
+        <div>
+            <label for="gender">Gender</label>
+        <input type="radio" id="gender" name="gender">male
+        <input type="radio" id="gender" name="gender">Female
+        </div>
+        <div>
+            <label for="carbrands">Car Brands</label>
+        <input type="checkbox" id="cars" name="bmw" value="bmw">
+        <label for="cars">BMW</label>
+        <input type="checkbox" id="cars" name="audi" value="audi">
+        <label for="cars">Audi</label>
+        <input type="checkbox" id="cars" name="mercedez" value="mercedez">
+        <label for="cars">Mercedez</label>
+        </div>
+        <div>
+            <label for="carage"Car Age></label>
+        </div>
+        <div>
+            <label for="dop">Date of Purchase</label>
+        <input type="text" id="dop" required>
+        </div>
+        <div>
+            <label for="Password">Password</label>
+        <input type="password" id="Password" required>
+        </div>
+        <div>
+            <input type="submit">
+        </div>
+    </form>
 
 </body>
 
