--- a/main.html
+++ b/main.html
@@ -21,9 +21,11 @@
         </div>
         <div>
             <label for="gender">Gender</label>
-        <input type="radio" id="gender" name="male">male
-        <input type="radio" id="gender" name="female">Female
-        </div>
+    <input type="radio" id="male" name="gender">
+    <label for="male">Male</label>
+    <input type="radio" id="female" name="gender">
+    <label for="female">Female</label>
+    </div>
         <label for="cars">Car Brands:</label>
     <select id="cars" name="cars">
     <option value="bmw">BMW</option>
@@ -39,7 +41,7 @@
         <input type="text" id="dop" required>
         </div>
         <div>
-            <label for=password">Password</label>
+            <label for="password">Password</label>
         <input type="password" id="password" required>
         </div>
         <div>
