--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
         <input type="email" id="email" required>
         </div>
         <div>
-            <label for="gender">Gender</label>
+			Gender
     <input type="radio" id="male" name="gender">
     <label for="male">Male</label>
     <input type="radio" id="female" name="gender">
