--- a/main.html
+++ b/main.html
@@ -21,9 +21,9 @@
         </div>
         <div>
 			Gender
-    <input type="radio" id="male" name="gender">
+    <input type="radio" id="male" name="gender" required>
     <label for="male">Male</label>
-    <input type="radio" id="female" name="gender">
+    <input type="radio" id="female" name="gender" required>
     <label for="female">Female</label>
     </div>
         <label for="cars">Car Brands:</label>
@@ -38,7 +38,7 @@
         </div>
         <div>
             <label for="dop">Date of Purchase</label>
-        <input type="text" id="dop" required>
+        <input type="date" id="dop" required>
         </div>
         <div>
             <label for="password">Password</label>
